--- a/aboutme.html
+++ b/aboutme.html
@@ -132,7 +132,7 @@
               focus on cybersecurity.
               <br /><br />
               At UMD, I am part of the Sigma Phi Delta Engineering Fraternity,
-              where I serve as the treasurer of an executive board. Being
+              where I serve as the treasurer of the executive board. Being
               treasurer has taught me many invaluable skills such as teamwork,
               communication, and leadership.
               <br /><br />
