--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Discrete Math</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Logic, sets, relations, graphs
+                    Logic, sets, relations, graphs, proof writing
                   </p>
                 </div>
 
