--- a/aboutme.html
+++ b/aboutme.html
@@ -2,19 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Daniel Son</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div class="mobile-menu-btn md:hidden fixed top-4 right-4 z-50">
-      <button class="text-green-400 text-2xl">☰</button>
-    </div>
-
     <header id="scroll-header" class="matrix-header">
       <div class="matrix-scanline"></div>
       <nav class="matrix-nav">
@@ -30,7 +23,7 @@
     <div class="content-wrapper">
       <!-- Header -->
       <div
-        class="h-screen flex flex-col justify-center items-center text-center px-4"
+        class="h-screen flex flex-col justify-center items-center text-center"
       >
         <h1 class="matrix-text">About Me</h1>
         <div class="mt-4 typing-shadow">
@@ -48,9 +41,7 @@
 
       <!-- Combined Black Box Section -->
       <div class="my-12 px-4">
-        <div
-          class="bg-black/80 rounded-2xl shadow-lg p-4 md:p-6 max-w-6xl mx-auto"
-        >
+        <div class="bg-black/80 rounded-2xl shadow-lg p-6 max-w-6xl mx-auto">
           <!-- Go Back Button (now outside the black box) -->
           <div class="text-center my-6">
             <a href="index.html" class="neon-button">Home</a>
@@ -62,79 +53,62 @@
           <div class="flex flex-col lg:flex-row gap-8 mb-8">
             <!-- Toolkit on the left (narrower) -->
             <div class="lg:w-1/3 text-left">
-              <h2 class="text-2xl md:text-3xl font-bold mb-6">--------</h2>
+              <h2 class="text-3xl font-bold mb-6">--------</h2>
 
               <!-- Compact Skills Section -->
               <div class="space-y-4">
                 <div>
-                  <h3 class="text-lg md:text-xl font-semibold mb-2">
-                    Favorites
-                  </h3>
+                  <h3 class="text-xl font-semibold mb-2">Favorites</h3>
                   <div class="flex flex-wrap gap-2">
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Animal : Penguin</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Color : Red</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Season : Winter</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Subject : Math</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Song : Dreams by Fleetwood Mac</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Sports Team : Chicago Blackhawks</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Vacation : Aruba</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Emoji : 😢</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Movie : Rogue One</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Show : Andor</span
                     >
                   </div>
                 </div>
 
                 <div>
-                  <h3 class="text-lg md:text-xl font-semibold mb-2">Hobbies</h3>
+                  <h3 class="text-xl font-semibold mb-2">Hobbies</h3>
                   <div class="flex flex-wrap gap-2">
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Video games</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Weightlifting</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Running</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Going on drives</span
                     >
-                    <span
-                      class="text-xs md:text-sm bg-gray-700 px-2 py-1 rounded"
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Photography</span
                     >
                   </div>
@@ -143,36 +117,32 @@
             </div>
 
             <div class="lg:w-2/3">
-              <h2 class="text-2xl md:text-3xl font-bold mb-6">About Me</h2>
-              <p class="text-sm md:text-base">
-                Hi, I'm Daniel. I am a Korean-American from Massachusetts,
-                attending the University of Maryland. I am a Computer Science
-                and Mathematics double major, entering my third undergraduate
-                year.
-                <br /><br />
-                I have been coding for a long time, starting with basic block
-                coding on Scratch with my best friend in 5th grade. I took all
-                of the computer science courses offered at my high school,
-                learning foundational skills such as HTML, Python, Java, OOP
-                design, and more. I even earned a 5 on my AP Computer Science A
-                exam!
-                <br /><br />
-                I decided to continue my pursuit of computer science at UMD with
-                a focus on cybersecurity.
-                <br /><br />
-                At UMD, I am part of the Sigma Phi Delta Engineering Fraternity,
-                where I serve as the treasurer of the executive board. Being
-                treasurer has taught me many invaluable skills such as teamwork,
-                communication, and leadership.
-                <br /><br />
-                I even developed a Python auto-messenger to automate the process
-                of communicating financial information, as I got quite sick of
-                copy and pasting messages to 70+ members!
-                <br /><br />
-                The University of Maryland and SigPhi are my happy places, and I
-                love all of my friends and acquaintances who make every day
-                worth it :D
-              </p>
+              <h2 class="text-3xl font-bold mb-6">About Me</h2>
+              Hi, I'm Daniel. I am a Korean-American from Massachusetts,
+              attending the University of Maryland. I am a Computer Science and
+              Mathematics double major, entering my third undergraduate year.
+              <br /><br />
+              I have been coding for a long time, starting with basic block
+              coding on Scratch with my best friend in 5th grade. I took all of
+              the computer science courses offered at my high school, learning
+              foundational skills such as HTML, Python, Java, OOP design, and
+              more. I even earned a 5 on my AP Computer Science A exam!
+              <br /><br />
+              I decided to continue my pursuit of computer science at UMD with a
+              focus on cybersecurity.
+              <br /><br />
+              At UMD, I am part of the Sigma Phi Delta Engineering Fraternity,
+              where I serve as the treasurer of the executive board. Being
+              treasurer has taught me many invaluable skills such as teamwork,
+              communication, and leadership.
+              <br /><br />
+              I even developed a Python auto-messenger to automate the process
+              of communicating financial information, as I got quite sick of
+              copy and pasting messages to 70+ members!
+              <br /><br />
+              The University of Maryland and SigPhi are my happy places, and I
+              love all of my friends and acquaintances who make every day worth
+              it :D
             </div>
           </div>
 
