added linux skill

--- a/index.html
+++ b/index.html
@@ -307,6 +307,9 @@
                     <span class="text-xs bg-purple-600 px-2 py-1 rounded"
                       >C</span
                     >
+                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
+                      >Linux</span
+                    >
                   </a>
                 </div>
 
@@ -381,6 +384,9 @@
                     >
                     <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
                       >Metasploit</span
+                    >
+                    <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
+                      >Linux</span
                     >
                   </a>
                 </div>
