--- a/aboutme.html
+++ b/aboutme.html
@@ -131,7 +131,7 @@
               I decided to continue my pursuit of computer science at UMD with a
               focus on cybersecurity.
               <br /><br />
-              At UMD, I am part of the Sigma Phi Delta Engineering Fraternity,
+              At UMD I am part of the Sigma Phi Delta Engineering Fraternity,
               where I serve as the treasurer of the executive board. Being
               treasurer has taught me many invaluable skills such as teamwork,
               communication, and leadership.
