--- a/index.html
+++ b/index.html
@@ -309,9 +309,6 @@
                     <span class="text-xs bg-purple-600 px-2 py-1 rounded"
                       >C</span
                     >
-                    <span class="text-xs bg-purple-600 px-2 py-1 rounded"
-                      >Linux</span
-                    >
                   </a>
                 </div>
 
@@ -388,7 +385,7 @@
                       >Metasploit</span
                     >
                     <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Linux</span
+                      >Gemini AI</span
                     >
                   </a>
                 </div>
