--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                       >Metasploit</span
                     >
                     <span class="text-xs bg-indigo-600 px-2 py-1 rounded"
-                      >Gemini AI</span
+                      >Gemini API</span
                     >
                   </a>
                 </div>
