enhanced skills & projects

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded">C</span>
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >C#</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Rust</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -150,7 +153,25 @@
                 </div>
 
                 <div>
-                  <h3 class="text-xl font-semibold mb-2">Security</h3>
+                  <h3 class="text-xl font-semibold mb-2">Security Skills</h3>
+                  <div class="flex flex-wrap gap-2">
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Incident Response</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Network Analysis</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Risk Management</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Automation</span
+                    >
+                  </div>
+                </div>
+
+                <div>
+                  <h3 class="text-xl font-semibold mb-2">Security Tools</h3>
                   <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Nmap</span
@@ -277,17 +298,26 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
+                    href="https://github.com/DanielSon721/Payroll-Management-System"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block"
                   >
-                    <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
+                    <h3 class="text-xl font-bold mb-2">Home Lab</h3>
                     <p class="text-gray-400 mb-3">
-                      Play poker against A.I. opponents
+                      VM configuration, network analysis, ethical hacking
                     </p>
-                    <span class="text-xs bg-red-600 px-2 py-1 rounded"
-                      >Python</span
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                      >Kali Linux</span
+                    >
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                      >VMWare</span
+                    >
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                      >Wireshark</span
+                    >
+                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                      >Nmap</span
                     >
                   </a>
                 </div>
@@ -353,10 +383,10 @@
                       >Python</span
                     >
                     <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >Google Sheets API</span
+                      >Pandas</span
                     >
                     <span class="text-xs bg-green-700 px-2 py-1 rounded"
-                      >Pandas</span
+                      >Google Sheets API</span
                     >
                   </a>
                 </div>
@@ -404,13 +434,13 @@
                     <p class="text-gray-400 mb-3">
                       RLCS Esports match outcome predictor
                     </p>
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                       >Jupyter Notebook</span
                     >
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                       >Pandas</span
                     >
-                    <span class="text-xs bg-pink-600 px-2 py-1 rounded"
+                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
                       >scikit-learn</span
                     >
                   </a>
@@ -421,22 +451,17 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Payroll-Management-System"
+                    href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block"
                   >
-                    <h3 class="text-xl font-bold mb-2">
-                      Payroll Management System
-                    </h3>
+                    <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
                     <p class="text-gray-400 mb-3">
-                      University TA payroll management system
+                      Play poker against A.I. opponents
                     </p>
-                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >Java</span
-                    >
-                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >JUnit</span
+                    <span class="text-xs bg-red-600 px-2 py-1 rounded"
+                      >Python</span
                     >
                   </a>
                 </div>
