--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="index.html" class="matrix-link">Home</a>
         <a href="aboutme.html" class="matrix-link">About Me</a>
         <a href="writing.html" class="matrix-link">Writing Samples</a>
+        <a href="projects.html" class="matrix-link">Projects</a>
       </nav>
       <a href="index.html" class="matrix-glow">Daniel Son</a>
     </header>
@@ -196,6 +197,9 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >GitHub</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Unity</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >JUnit</span
@@ -425,23 +429,20 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
                 >
                   <a
-                    href="https://github.com/DanielSon721/RLCS-Predictor"
+                    href="https://github.com/DanielSon721/Slime-Skirmish"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block"
                   >
-                    <h3 class="text-xl font-bold mb-2">RLCS Predictor</h3>
+                    <h3 class="text-xl font-bold mb-2">Slime Skirmish</h3>
                     <p class="text-gray-400 mb-3">
-                      RLCS Esports match outcome predictor
+                      2-Dimensional survival game made on Unity game engine
                     </p>
                     <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >Jupyter Notebook</span
+                      >C#</span
                     >
                     <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >Pandas</span
-                    >
-                    <span class="text-xs bg-orange-500 px-2 py-1 rounded"
-                      >scikit-learn</span
+                      >Unity</span
                     >
                   </a>
                 </div>
