added more projects

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
                       >Dune</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >BreezySwing</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >pandas</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -604,15 +607,15 @@
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Academic Writing</h4>
-                  <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
+                  <h4 class="font-semibold">The Coding Interview</h4>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Leetcode and behavioral interview practice
+                  </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
-                  <h4 class="font-semibold">Philosophy</h4>
-                  <p class="text-sm text-gray-400 mt-1">
-                    Fundamental philosophical concepts
-                  </p>
+                  <h4 class="font-semibold">Academic Writing</h4>
+                  <p class="text-sm text-gray-400 mt-1">Rhetoric in writing</p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
