--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
             <img
               src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&
               lines=
-              More projects"
+              Cool Stuff I've Made"
               alt="Typing Animation"
             />
           </div>
@@ -263,6 +263,74 @@
                   >
                   <span class="text-xs bg-yellow-500 px-2 py-1 rounded"
                     >scikit-learn</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 10 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Payroll-Management-System"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">
+                    Payroll Management System
+                  </h3>
+                  <p class="text-gray-400 mb-3">
+                    University TA payroll management system
+                  </p>
+                  <span class="text-xs bg-blue-700 px-2 py-1 rounded"
+                    >Java</span
+                  >
+                  <span class="text-xs bg-blue-700 px-2 py-1 rounded"
+                    >JUnit</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 11 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Assembly-Methods"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">Assembly Methods</h3>
+                  <p class="text-gray-400 mb-3">
+                    Basic functions written in MIPS assembly
+                  </p>
+                  <span class="text-xs bg-gray-500 px-2 py-1 rounded"
+                    >Assembly</span
+                  >
+                </a>
+              </div>
+
+              <!-- Project 12 -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Assembly-Methods"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block"
+                >
+                  <h3 class="text-xl font-bold mb-2">Complex Calculator</h3>
+                  <p class="text-gray-400 mb-3">
+                    Fraction and complex number calulator
+                  </p>
+                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                    >Java</span
+                  >
+                  <span class="text-xs bg-pink-400 px-2 py-1 rounded"
+                    >Breezyswing</span
                   >
                 </a>
               </div>
