--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,8 @@
             <img
               src="https://readme-typing-svg.demolab.com?font=Fira+Code&weight=600&size=24&pause=1500&color=FFFFFF&center=true&vCenter=true&width=500&
               lines=
-              Cool Stuff I've Made"
+              Cool stuff I've built;
+              More on my Github"
               alt="Typing Animation"
             />
           </div>
@@ -317,7 +318,7 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform"
               >
                 <a
-                  href="https://github.com/DanielSon721/Assembly-Methods"
+                  href="https://github.com/DanielSon721/Complex-Calculator"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block"
