--- a/aboutme.html
+++ b/aboutme.html
@@ -56,7 +56,7 @@
           <div class="flex flex-col lg:flex-row gap-8 mb-8">
             <!-- Toolkit on the left (narrower) -->
             <div class="lg:w-1/3 text-left">
-              <h2 class="text-3xl font-bold mb-6">--------</h2>
+              <h2 class="text-3xl font-bold mb-6">——————————————————</h2>
 
               <!-- Compact Skills Section -->
               <div class="space-y-4">
