--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                       >Linux</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
-                      >Kali</span
+                      >Kali Linux</span
                     >
                   </div>
                 </div>
