fixed spacing for calculus boxes

--- a/index.html
+++ b/index.html
@@ -548,26 +548,28 @@
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus I</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Differential calculus
+                    Differential calculus<br /><br />
                   </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus II</h4>
-                  <p class="text-sm text-gray-400 mt-1">Integral calculus</p>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Integral calculus<br /><br />
+                  </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Calculus III</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Multivariable calculus
+                    Multivariable calculus<br /><br />
                   </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
                   <h4 class="font-semibold">Advanced Calculus</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Mathematical analysis
+                    Mathematical analysis<br /><br />
                   </p>
                 </div>
 
