--- a/index.html
+++ b/index.html
@@ -521,7 +521,9 @@
                   <h4 class="font-semibold">
                     Organization of Programming Languages
                   </h4>
-                  <p class="text-sm text-gray-400 mt-1">Syntax and semantics</p>
+                  <p class="text-sm text-gray-400 mt-1">
+                    Syntax, semantics, automata
+                  </p>
                 </div>
 
                 <div class="bg-gray-800/70 p-3 rounded-lg">
